// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should display danger severity state 1`] = `
<main
  className="sc-AxjAm oHVtP"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <section
    className="sc-AxirZ ihGzgH"
  >
    danger
  </section>
</main>
`;

exports[`Button Component should display info severity state 1`] = `
<main
  className="sc-AxjAm bFEgVV"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <section
    className="sc-AxirZ ihGzgH"
  >
    info
  </section>
</main>
`;

exports[`Button Component should display warning severity state 1`] = `
<main
  className="sc-AxjAm jdLlxh"
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <section
    className="sc-AxirZ ihGzgH"
  >
    warning
  </section>
</main>
`;
